--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,25 +48,58 @@
             android:inputType="text" />
 
 
-
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/etNum1"
-            android:layout_centerInParent="true"
             android:layout_marginTop="20dp"
-            android:text="Sum" />
+            android:text="+"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/subButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/etNum1"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/addButton"
+            android:text="-"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/mulButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/etNum1"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/subButton"
+            android:text="*"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/divButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/etNum1"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/mulButton"
+            android:text="/"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
 
         <TextView
             android:id="@+id/txtResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/button"
+            android:layout_below="@id/addButton"
             android:layout_centerHorizontal="true"
-            android:textSize="30sp"
-
-            android:text="0" />
+            android:text="0"
+            android:textSize="30sp" />
 
     </RelativeLayout>
 
